# baudboard

./: .gitignore  README.md  lattice.yaml
backend/: pyproject.toml  requirements.txt
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routers/: boards.py  cards.py  columns.py  labels.py  users.py
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/styles/: global.css
frontend/src/types/: index.ts
specs/: architecture.md  tasks.md
